feat added ef core and migrations

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "HotelDbConnection":"Server=.\\SqlExpress; Database=HotelAPIDb; Trusted_Connection=true; TrustServerCertificate=true; MultipleActiveResultSets=true"
+  },
   "Serilog":{
     "MinimumLevel": {
       "Default": "Information",
