feat added identity and token authentication

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "HotelDbConnection":"Server=.\\SqlExpress; Database=HotelAPIDb; Trusted_Connection=true; TrustServerCertificate=true; MultipleActiveResultSets=true"
   },
+  "JwtSettings":{
+    "Issuer":"HotelAPI",
+    "Audience": "HotelAPIClient",
+    "DurationInMinutes": 10,
+    "Key":"OPJFodFoqt42_eqtl*fBq)-mynKeD%%flcx.234CCy_po0wUdgN(=smiGne+3adPLV444"
+  },
   "Serilog":{
     "MinimumLevel": {
       "Default": "Information",
