--- a/Hotel.API.Data/Hotel.API.Data.csproj
+++ b/Hotel.API.Data/Hotel.API.Data.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
 
   </ItemGroup>
 </Project>
